# http-server-with-tls

./: .gitignore  Cargo.toml  Dockerfile  README.md
k8s/: asset.yaml  deployment.yaml  generate-v3-certs.sh
src/: main.rs
